--- a/index.html
+++ b/index.html
@@ -25,22 +25,27 @@
           <form class="form">
             <div>
               <label for="name">Введите ваше ФИО:</label> <br />
-              <input type="text" name="name" />
+              <input type="text" name="name" class="username" />
             </div>
             <div>
               <label for="avatar">Введите ссылку вашего аватара:</label> <br />
-              <input type="url" name="avatar" />
+              <input type="url" name="avatar" class="linkPhoto" />
             </div>
             <div>
               <label for="form__comment">Оставьте комментарий:</label><br />
-              <textarea class="form__comment" rows="10"></textarea>
+              <textarea class="form__comment comment" rows="10"></textarea>
             </div>
             <div>
-              <button class="form__btn">Отправить</button>
+              <button type="button" class="form__btn">Отправить</button>
             </div>
           </form>
         </div>
-        <div><p class="subtitle">Чат</p></div>
+        <div>
+          <p class="subtitle">Чат</p>
+          <div class="avatar"></div>
+          <p class="nickname"></p>
+          <p class="message"></p>
+        </div>
       </div>
     </div>
     <script src="index.js"></script>
