0add js comment

--- a/index.html
+++ b/index.html
@@ -42,9 +42,12 @@
         </div>
         <div>
           <p class="subtitle">Чат</p>
-          <div class="avatar"></div>
-          <p class="nickname"></p>
+          <div class="chat__user">
+            <div class="avatar"></div>
+            <p class="nickname"></p>
+          </div>
           <p class="message"></p>
+          <div class="line"></div>
         </div>
       </div>
     </div>
