add js getTime()

--- a/index.html
+++ b/index.html
@@ -43,8 +43,11 @@
         <div>
           <p class="subtitle">Чат</p>
           <div class="chat__user">
-            <div class="avatar"></div>
-            <p class="nickname"></p>
+            <div class="chat__userDate">
+              <div class="avatar"></div>
+              <p class="nickname"></p>
+            </div>
+            <div class="dateNow"></div>
           </div>
           <p class="message"></p>
           <div class="line"></div>
