--- a/index.html
+++ b/index.html
@@ -69,15 +69,17 @@
         </div>
         <div>
           <p class="subtitle">Чат</p>
-          <div class="chat__user">
-            <div class="chat__userDate">
-              <div class="avatar"></div>
-              <p class="nickname"></p>
+          <div class="chat__info">
+            <div class="chat__user">
+              <div class="chat__userDate">
+                <div class="avatar"></div>
+                <p class="nickname"></p>
+              </div>
+              <div class="dateNow"></div>
             </div>
-            <div class="dateNow"></div>
+            <p class="message"></p>
+            <div class="line"></div>
           </div>
-          <p class="message"></p>
-          <div class="line"></div>
         </div>
       </div>
     </div>
