correct js block comments

--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
         </div>
         <div>
           <p class="subtitle">Чат</p>
-          <div class="chat__info">
-            <div class="chat__user">
-              <div class="chat__userDate">
+          <div class="chat">
+            <div class="chat__header">
+              <div class="chat__info">
                 <div class="avatar"></div>
                 <p class="nickname"></p>
               </div>
@@ -79,6 +79,7 @@
             </div>
             <p class="message"></p>
             <div class="line"></div>
+            <div class="comments"></div>
           </div>
         </div>
       </div>
